git fix indents

--- a/package/batocera/emulationstation/batocera-es-system/locales/en_GB/batocera-es-system.po
+++ b/package/batocera/emulationstation/batocera-es-system/locales/en_GB/batocera-es-system.po
@@ -378,6 +378,46 @@ msgctxt "game_options"
 msgid "JOYSTICK HACK (FOR ROBOTRON 2084)"
 msgstr ""
 
+#. TRANSLATION: libretro/fmsx
+msgctxt "game_options"
+msgid "Custom Keyboard mapping is available on RA core options menu."
+msgstr ""
+
+#. TRANSLATION: libretro/fmsx, libretro/dosbox, libretro/dosbox, libretro/dosbox_pure, libretro/dosbox_pure, ...
+msgctxt "game_options"
+msgid "CONTROLLER SETTINGS"
+msgstr ""
+
+#. TRANSLATION: libretro/fmsx, libretro/dosbox, libretro/dosbox_pure, libretro/swanstation, libretro/duckstation, ...
+msgctxt "game_options"
+msgid "CONTROLLER 1 TYPE"
+msgstr ""
+
+#. TRANSLATION: libretro/fmsx, libretro/puae, libretro/puae, libretro/puae, libretro/puae, ...
+msgctxt "game_options"
+msgid "Joystick"
+msgstr ""
+
+#. TRANSLATION: libretro/fmsx
+msgctxt "game_options"
+msgid "Joystick + Emulated Keyboard"
+msgstr ""
+
+#. TRANSLATION: libretro/fmsx
+msgctxt "game_options"
+msgid "Emulated Keyboard"
+msgstr ""
+
+#. TRANSLATION: libretro/fmsx
+msgctxt "game_options"
+msgid "Custom Keyboard"
+msgstr ""
+
+#. TRANSLATION: libretro/fmsx
+msgctxt "game_options"
+msgid "Real Keyboard"
+msgstr ""
+
 #. TRANSLATION: libretro/bluemsx
 msgctxt "game_options"
 msgid "Enhancement. Remove the four sprites per line limit."
@@ -916,11 +956,6 @@ msgstr ""
 #. TRANSLATION: libretro/dosbox, openbor
 msgctxt "game_options"
 msgid "VIDEO FILTER"
-msgstr ""
-
-#. TRANSLATION: libretro/dosbox, libretro/dosbox_pure, libretro/swanstation, libretro/duckstation, libretro/fceumm, ...
-msgctxt "game_options"
-msgid "CONTROLLER 1 TYPE"
 msgstr ""
 
 #. TRANSLATION: libretro/dosbox, libretro/dosbox
@@ -1868,11 +1903,6 @@ msgctxt "game_options"
 msgid "Sinclair 1 controller set to AUTO."
 msgstr ""
 
-#. TRANSLATION: libretro/fuse
-msgctxt "game_options"
-msgid "CONTROLLER TYPE 1"
-msgstr ""
-
 #. TRANSLATION: libretro/fuse, libretro/fuse, libretro/mame078plus, libretro/puae, libretro/puae, ...
 msgctxt "game_options"
 msgid "Retropad"
@@ -1916,11 +1946,6 @@ msgstr ""
 #. TRANSLATION: libretro/fuse
 msgctxt "game_options"
 msgid "Sinclair 2 controller set to AUTO."
-msgstr ""
-
-#. TRANSLATION: libretro/fuse
-msgctxt "game_options"
-msgid "CONTROLLER TYPE 2"
 msgstr ""
 
 #. TRANSLATION: libretro/fuse
@@ -4513,22 +4538,22 @@ msgctxt "game_options"
 msgid "Enable launching pre-installed WHDLoad installs."
 msgstr ""
 
-#. TRANSLATION: libretro/puae, libretro/puae, libretro/puae2021, libretro/puae2021, libretro/uae4arm, ...
+#. TRANSLATION: libretro/puae, libretro/puae, libretro/puae2021, libretro/puae2021, libretro/uae4arm
 msgctxt "game_options"
 msgid "WHDLOAD LAUNCHER"
 msgstr ""
 
-#. TRANSLATION: libretro/puae, libretro/puae, libretro/puae2021, libretro/puae2021, libretro/uae4arm, ...
+#. TRANSLATION: libretro/puae, libretro/puae, libretro/puae2021, libretro/puae2021
 msgctxt "game_options"
 msgid "Passes all physical keyboard events for Pad2Key."
 msgstr ""
 
-#. TRANSLATION: libretro/puae, libretro/puae, libretro/puae2021, libretro/puae2021, libretro/uae4arm, ...
+#. TRANSLATION: libretro/puae, libretro/puae, libretro/puae2021, libretro/puae2021
 msgctxt "game_options"
 msgid "DISABLE EMULATOR JOYSTICK"
 msgstr ""
 
-#. TRANSLATION: libretro/puae, libretro/puae, libretro/puae2021, libretro/puae2021, libretro/uae4arm, ...
+#. TRANSLATION: libretro/puae, libretro/puae, libretro/puae2021, libretro/puae2021, libretro/vice_x64, ...
 msgctxt "game_options"
 msgid "Makes second fire button press up instead."
 msgstr ""
@@ -4538,7 +4563,7 @@ msgctxt "game_options"
 msgid "JUMP ON A"
 msgstr ""
 
-#. TRANSLATION: libretro/puae, libretro/puae, libretro/puae2021, libretro/puae2021, libretro/uae4arm, ...
+#. TRANSLATION: libretro/puae, libretro/puae, libretro/puae2021, libretro/puae2021, libretro/uae4arm
 msgctxt "game_options"
 msgid "Select controller type for Amiga P1."
 msgstr ""
@@ -4553,37 +4578,32 @@ msgctxt "game_options"
 msgid "Analog Joystick"
 msgstr ""
 
-#. TRANSLATION: libretro/puae, libretro/puae, libretro/puae, libretro/puae, libretro/puae2021, ...
-msgctxt "game_options"
-msgid "Joystick"
-msgstr ""
-
-#. TRANSLATION: libretro/puae, libretro/puae, libretro/puae2021, libretro/puae2021, libretro/uae4arm, ...
+#. TRANSLATION: libretro/puae, libretro/puae, libretro/puae2021, libretro/puae2021, libretro/uae4arm
 msgctxt "game_options"
 msgid "Select controller type for Amiga P2."
 msgstr ""
 
-#. TRANSLATION: libretro/puae, libretro/puae, libretro/puae2021, libretro/puae2021, libretro/uae4arm, ...
+#. TRANSLATION: libretro/puae, libretro/puae, libretro/puae2021, libretro/puae2021
 msgctxt "game_options"
 msgid "Use to play pinball games with correct mapping."
 msgstr ""
 
-#. TRANSLATION: libretro/puae, libretro/puae, libretro/puae2021, libretro/puae2021, libretro/uae4arm, ...
+#. TRANSLATION: libretro/puae, libretro/puae, libretro/puae2021, libretro/puae2021
 msgctxt "game_options"
 msgid "PINBALL MAPPING MODE"
 msgstr ""
 
-#. TRANSLATION: libretro/puae, libretro/puae, libretro/puae2021, libretro/puae2021, libretro/uae4arm, ...
+#. TRANSLATION: libretro/puae, libretro/puae, libretro/puae2021, libretro/puae2021
 msgctxt "game_options"
 msgid "Modern"
 msgstr ""
 
-#. TRANSLATION: libretro/puae, libretro/puae, libretro/puae2021, libretro/puae2021, libretro/uae4arm, ...
+#. TRANSLATION: libretro/puae, libretro/puae, libretro/puae2021, libretro/puae2021
 msgctxt "game_options"
 msgid "Modern Alternative"
 msgstr ""
 
-#. TRANSLATION: libretro/puae, libretro/puae, libretro/puae2021, libretro/puae2021, libretro/uae4arm, ...
+#. TRANSLATION: libretro/puae, libretro/puae, libretro/puae2021, libretro/puae2021
 msgctxt "game_options"
 msgid "Classic"
 msgstr ""
@@ -4638,24 +4658,19 @@ msgctxt "game_options"
 msgid "COPPER COPROCESSOR"
 msgstr ""
 
-#. TRANSLATION: libretro/uae4arm, libretro/uae4arm
+#. TRANSLATION: libretro/uae4arm
 msgctxt "game_options"
 msgid "FLOPPY SPEED"
 msgstr ""
 
-#. TRANSLATION: libretro/uae4arm, libretro/uae4arm
+#. TRANSLATION: libretro/uae4arm
 msgctxt "game_options"
 msgid "Files"
 msgstr ""
 
-#. TRANSLATION: libretro/uae4arm, libretro/uae4arm
+#. TRANSLATION: libretro/uae4arm
 msgctxt "game_options"
 msgid "HDFs"
-msgstr ""
-
-#. TRANSLATION: libretro/uae4arm, libretro/uae4arm, libretro/uae4arm, libretro/uae4arm, libretro/uae4arm, ...
-msgctxt "game_options"
-msgid "CONTROLLER SETTINGS"
 msgstr ""
 
 #. TRANSLATION: libretro/px68k, libretro/quasi88
